--- a/styles/ui.css
+++ b/styles/ui.css
@@ -5,8 +5,8 @@
 }
 
 @font-face {
-  font-family: 'Satoshi';
-  src: url('/assets/fonts/Satoshi-Black.otf') format('opentype');
+  font-family: 'PlusJakartaSans-Regular';
+  src: url('/assets/fonts/PlusJakartaSans-Regular.otf') format('opentype');
   font-weight: 900;
 }
 
@@ -21,7 +21,7 @@
   z-index: 10;
 
   opacity: 0;
-  transition: opacity 0.6s ease;
+  transition: opacity 2s ease;
   pointer-events: none;
 }
 
@@ -44,13 +44,15 @@
 .hero__title {
   font-family: 'Satoshi-Black';
   font-size: 8rem;
-  margin-bottom: 1rem;
+  margin: 0;
   color: black;
 }
 
 .hero__subtitle {
-  font-size: 1.1rem;
-  margin-bottom: 2rem;
+  font-family: 'PlusJakartaSans-Regular';
+  font-size: 3rem;
+  margin: 0;
+  padding-bottom: 2rem;
 }
 
 .hero__cta-btn {
