--- a/styles/persistentUI.css
+++ b/styles/persistentUI.css
@@ -1,69 +1,56 @@
-.container {
-}
-
-.label {
-  height: 60px;
-  width: 120px;
-  background-color: #ffffff;
-  border-radius: 30px;
-  -webkit-box-shadow: inset 0 0 5px 4px rgba(255, 255, 255, 1),
-    inset 0 0 20px 1px rgba(0, 0, 0, 0.488), 10px 20px 30px rgba(0, 0, 0, 0.096),
-    inset 0 0 0 3px rgba(0, 0, 0, 0.3);
-  box-shadow: inset 0 0 5px 4px rgba(255, 255, 255, 1),
-    inset 0 0 20px 1px rgba(0, 0, 0, 0.488), 10px 20px 30px rgba(0, 0, 0, 0.096),
-    inset 0 0 0 3px rgba(0, 0, 0, 0.3);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  cursor: pointer;
+.theme {
   position: relative;
-  -webkit-transition: -webkit-transform 0.4s;
-  transition: -webkit-transform 0.4s;
-  transition: transform 0.4s;
+  width: 100px;
+  height: 50px;
+
+  --color-light: #d8dbe0;
+  --color-dark: #28292c;
+  --color-link: rgb(27, 129, 112);
+  --color-link-hover: rgb(24, 94, 82);
 }
 
-.label:hover {
-  -webkit-transform: perspective(100px) rotateX(5deg) rotateY(-5deg);
-  transform: perspective(100px) rotateX(5deg) rotateY(-5deg);
+.theme__label {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-dark);
+  border-radius: 25px;
+  cursor: pointer;
+  border: 3px solid var(--color-dark);
 }
 
-#checkbox:checked ~ .label:hover {
-  -webkit-transform: perspective(100px) rotateX(-5deg) rotateY(5deg);
-  transform: perspective(100px) rotateX(-5deg) rotateY(5deg);
-}
-
-#checkbox {
+.theme__checkbox {
+  position: absolute;
   display: none;
 }
 
-#checkbox:checked ~ .label::before {
-  left: 70px;
-  background-color: #000000;
-  background-image: linear-gradient(315deg, #000000 0%, #414141 70%);
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
+.theme__slider {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 25px;
+  transition: 0.3s;
 }
 
-.label::before {
-  position: absolute;
+.theme__checkbox:checked ~ .theme__slider {
+  background-color: var(--color-light);
+}
+
+.theme__slider::before {
   content: "";
-  height: 40px;
-  width: 40px;
-  border-radius: 50%;
-  background-color: #000000;
-  background-image: linear-gradient(
-    130deg,
-    #757272 10%,
-    #ffffff 11%,
-    #726f6f 62%
-  );
+  position: absolute;
+  top: 10px;
   left: 10px;
-  -webkit-box-shadow: 0 2px 1px rgba(0, 0, 0, 0.3),
-    10px 10px 10px rgba(0, 0, 0, 0.3);
-  box-shadow: 0 2px 1px rgba(0, 0, 0, 0.3), 10px 10px 10px rgba(0, 0, 0, 0.3);
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  box-shadow: inset 12px -4px 0px 0px var(--color-light);
+  background-color: var(--color-dark);
+  transition: 0.3s;
+}
+
+.theme__checkbox:checked ~ .theme__slider::before {
+  transform: translateX(50px);
+  background-color: var(--color-dark);
+  box-shadow: none;
 }
