--- a/styles/auth.css
+++ b/styles/auth.css
@@ -29,53 +29,167 @@
   overflow: hidden;
 }
 
-.auth__page1,
-.auth__page2 {
+.page1__card,
+.page2__card {
   width: 100%;
   height: 100%;
   overflow: hidden;
   display: grid;
 }
 
-.auth__page1 {
+.page1__card {
   display: grid;
   grid-template-rows: 1fr 2fr 1fr;
   height: 100%;
   border-right: 0.5px solid ghostwhite;
 }
-.auth__page2 {
+.page2__card {
   border-left: 0.5px solid ghostwhite;
 }
 
-.auth__btn {
-  
-}
-
-.auth__page1--heading,
-.auth__page1--body {
+.page1__portion--heading,
+.page1__portion--body,
+.page1__portion--turn {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
 }
 
-.auth__page1--heading {
+.page1__portion--heading {
   font-family: Satoshi-Black;
   font-size: 48px;
   color: black;
 }
 
-.auth__page1--body {
+.page1__portion--body {
   font-family: PlusJakartaSans-Regular;
   font-size: 24px;
   color: black;
-  padding: 0 2rem;
+  padding: 0 1rem 0rem 2rem;
   text-align: justify;
   max-width: 40ch;
   margin: 0 auto;
 }
 
-.auth__page1--title,
-.auth__page1--desc {
+.page1__portion--turn {
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-end;
+  column-gap: 10px;
+  font-family: PlusJakartaSans-Regular;
+  font-size: 14px;
+  color: black;
+  padding: 0 1rem 2rem 2rem;
+}
+
+.page1__paragraph--title,
+.page1__paragraph--desc,
+.page1__paragraph--label,
+.page1__link--login {
   margin: 0;
 }
+
+
+/* page2 */
+.page2__card {
+  display: flex;
+  padding: 1rem;
+  box-sizing: border-box;
+}
+
+.page2__container {
+  background-color: #f1f7fe;
+  display: grid;
+  width: 100%;
+  height: 100%;
+  border: 1px solid white;
+  border-radius: 15px;
+  box-sizing: border-box;
+}
+
+/* uiverse */
+.form-box {
+  max-width: 300px;
+  background: #f1f7fe;
+  overflow: hidden;
+  border-radius: 16px;
+  color: #010101;
+}
+
+.form {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding: 32px 24px 24px;
+  gap: 16px;
+  text-align: center;
+}
+
+/*Form text*/
+.title {
+  font-weight: bold;
+  font-size: 1.6rem;
+}
+
+.subtitle {
+  font-size: 1rem;
+  color: #666;
+}
+
+/*Inputs box*/
+.form-container {
+  overflow: hidden;
+  border-radius: 8px;
+  background-color: #fff;
+  margin: 1rem 0 .5rem;
+  width: 100%;
+}
+
+.input {
+  background: none;
+  border: 0;
+  outline: 0;
+  height: 40px;
+  width: 100%;
+  border-bottom: 1px solid #eee;
+  font-size: .9rem;
+  padding: 8px 15px;
+}
+
+.form-section {
+  padding: 16px;
+  font-size: .85rem;
+  background-color: #e0ecfb;
+  box-shadow: rgb(0 0 0 / 8%) 0 -1px;
+}
+
+.form-section a {
+  font-weight: bold;
+  color: #0066ff;
+  transition: color .3s ease;
+}
+
+.form-section a:hover {
+  color: #005ce6;
+  text-decoration: underline;
+}
+
+/*Button*/
+.form button {
+  background-color: #0066ff;
+  color: #fff;
+  border: 0;
+  border-radius: 24px;
+  padding: 10px 16px;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color .3s ease;
+}
+
+.form button:hover {
+  background-color: #005ce6;
+}
+
+
