--- a/styles/auth.css
+++ b/styles/auth.css
@@ -15,7 +15,7 @@
   box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(15px);
-  background: rgba(218, 218, 218, 0.1);
+  background: rgba(255, 255, 255, 0.4);
 
   width: 100%;
   height: 100%;
@@ -49,7 +49,8 @@
 
 .page1__portion--heading,
 .page1__portion--body,
-.page1__portion--turn {
+.page1__portion--turn,
+.page2__form--box {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -98,41 +99,42 @@
   box-sizing: border-box;
 }
 
-.page2__container {
-  background-color: #f1f7fe;
+
+/* uiverse */
+.page2__form--box {
+  background-color: #e4f0ffa9;
   display: grid;
+  grid-template-rows: 1fr auto 4fr 1fr;
   width: 100%;
   height: 100%;
+  padding: 1rem;
   border: 1px solid white;
   border-radius: 15px;
   box-sizing: border-box;
-}
-
-/* uiverse */
-.form-box {
-  max-width: 300px;
-  background: #f1f7fe;
   overflow: hidden;
-  border-radius: 16px;
-  color: #010101;
+  color: black;
 }
 
 .form {
+  height: 100%;
   position: relative;
   display: flex;
   flex-direction: column;
   padding: 32px 24px 24px;
   gap: 16px;
   text-align: center;
+  box-sizing: border-box;
 }
 
 /*Form text*/
 .title {
+  font-family: Satoshi-Black;
   font-weight: bold;
-  font-size: 1.6rem;
+  font-size: 2rem;
 }
 
 .subtitle {
+  font-family: PlusJakartaSans-Regular;
   font-size: 1rem;
   color: #666;
 }
@@ -157,27 +159,8 @@
   padding: 8px 15px;
 }
 
-.form-section {
-  padding: 16px;
-  font-size: .85rem;
-  background-color: #e0ecfb;
-  box-shadow: rgb(0 0 0 / 8%) 0 -1px;
-}
-
-.form-section a {
-  font-weight: bold;
-  color: #0066ff;
-  transition: color .3s ease;
-}
-
-.form-section a:hover {
-  color: #005ce6;
-  text-decoration: underline;
-}
-
-/*Button*/
-.form button {
-  background-color: #0066ff;
+.page2__btn--sign {
+  background-color: #2f82ffff;
   color: #fff;
   border: 0;
   border-radius: 24px;
@@ -188,7 +171,7 @@
   transition: background-color .3s ease;
 }
 
-.form button:hover {
+.page2__btn--sign:hover {
   background-color: #005ce6;
 }
 
